--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <html>
 <body>
-	<h1> Woooo this is my website</h1>
+	<h1> Woooo this is my website and these are some changes</h1>
 </body>
 </html>
