--- a/printandbrand.html
+++ b/printandbrand.html
@@ -12,7 +12,7 @@
 
 <body>
 <div class ="grid header col-1-1">
-		<a class="logo" href="homepage.html"><h1>AMANDA JENNINGS</h1></a>
+		<a class="logo" href="index.html"><h1>AMANDA JENNINGS</h1></a>
 		<a class="hamburger" href="homepage.html"><h2>LEARN MORE</h2></a>
 </div>
 
@@ -20,7 +20,7 @@
 <div class="header">
 		<div class="col-1-1">
 			<div class="project6header">
-				<!-- <img src="img/Lead Gen Desktop V1.png" title="GA Email"></a> -->
+				<img src="img/project6_bodyheader.png">
 			</div>
 		</div>
 </div>
