--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -45,6 +45,81 @@
 
 <br>
 
+<!-- three collumns and 2 rows -->
+
+<div class="threecolumn">
+		<div class="col-1-3">
+			<div class="project1">
+				<a class="overlay" href="emaildesigns.html">
+				  <div class="overlay-text">
+					<h2>RESPONSIVE LAYOUT DESIGN | CREATED IN SKETCH</h2>
+					<h1>General Assembly Email Redesign</h1>
+				  	</div>
+				</a>
+				<img src="img/project1_homepage.png" title="Sweepstakes">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project2">
+				<a class="overlay" href="sweepstakes.html">
+				  <div class="overlay-text">
+					<h2>ART DIRECTION | STUDIO PHOTOGRAPHY | PHOTOGRAPHY EDITING | ASSET PRODUCTION</h2>
+					<h1>Sweepstakes + Campaigns</h1>
+				  	</div>
+				</a>
+				<img src="img/project2_homepage.png" title="Sweepstakes" alt="Sweepstakes">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project3">
+				<a class="overlay" href="advertising.html">
+				  <div class="overlay-text">
+					<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
+					<h1>Digital + Print Advertising</h1>
+				  	</div>
+				</a>
+				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
+			</div>
+		</div>
+</div>
+
+<div class="threecolumn">
+		<div class="col-1-3">
+			<div class="project4">
+				<a class="overlay" href="mediakit.html">
+				  <div class="overlay-text">
+					<h2>MEDIA KIT | ADVERTISING | PUBLIC RELATIONS</h2>
+					<h1>Fine Cooking Media Kit</h1>
+				  	</div>
+				</a>
+				<img src="img/project4_homepage.png" title="Fine Cooking Media Kit">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project5">
+				<a class="overlay" href="photomanipulation.html">
+				  <div class="overlay-text">
+					<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
+					<h1>Photography Manipulation</h1>
+				  	</div>
+				</a>
+				<img src="img/project5_homepage.png" title="Photo Manipulations">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project6">
+				<a class="overlay" href="printandbrand.html">
+				  <div class="overlay-text">
+					<h2>ILLUSTRATION | SYSTEMS</h2>
+				<h1>Branding</h1>
+				  	</div>
+				</a>
+				<img src="img/project6_homepage.png" title="Branding">
+			</div>
+		</div>
+</div>
+
+
 <!-- footer -->
 <br><br>
 <div class="grid threecolumn">
