--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -13,7 +13,7 @@
 <body>
 <div class ="grid header col-1-1">
 		<a class="logo" href="index.html"><h1>AMANDA JENNINGS</h1></a>
-		<a class="hamburger" href="index.html"><h2>LEARN MORE</h2></a>
+		<a class="hamburger" href="aboutme.html"><h2>ABOUT ME</h2></a>
 </div>
 
 <!-- body contents -->
@@ -82,62 +82,66 @@
 				</a>
 			</div>
 		</div>
-		<div class="col-1-2">
+	</div>
+	<div class="project5header">
+	<div class="col-1-3">
+		<p>These optical illusion portraits were created by masking multiple photographs together to create a unique view. </p>
+	</div>
+	</div>
+</div>
+
+
+<div class="grid manipulation">
+	<div class="col-2-3">
+		<div class="col-1-1">
 			<div class="project1">
 				<a href="img/photomanipulations/twin1.jpg" target="_blank"> 
 				<img src="img/photomanipulations/twin1.jpg">
 				</a>
 			</div>
 		</div>
-		<div class="col-1-2">
+		<div class="col-1-1">
 			<div class="project1">
-				<a href="img/photomanipulations/twin5.jpg" target="_blank">
-				<img src="img/photomanipulations/twin5.jpg">
+				<a href="img/photomanipulations/twin2.jpg" target="_blank">
+				<img src="img/photomanipulations/twin2.jpg">
 				</a>
 			</div>
 		</div>
-		<div class="col-1-2">
+		<div class="col-1-1">
+			<div class="project1">
+				<a href="img/photomanipulations/twin3.jpg" target="_blank">
+				<img src="img/photomanipulations/twin3.jpg">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-1">
+			<div class="project1">
+				<a href="img/photomanipulations/twin4.jpg" target="_blank">
+				<img src="img/photomanipulations/twin4.jpg">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-1">
 			<div class="project1">
 				<a href="img/photomanipulations/twin6.jpg" target="_blank">
 				<img src="img/photomanipulations/twin6.jpg">
 				</a>
 			</div>
 		</div>
+		<div class="col-1-1">
+			<div class="project1">
+				<a href="img/photomanipulations/twin5.jpg" target="_blank">
+				<img src="img/photomanipulations/twin5.jpg">
+				</a>
+			</div>
+		</div>
 	</div>
+	<div class="project5header">
 	<div class="col-1-3">
-		<h4>Here is a description blah blah blah.</h4>
+		<p>This was a project created while I was in my undergrad program that required me to 'change the past'. When I was younger, my mom would always take multipe photographs of the same event to ensure she had a great shot. I chose to scan in these old photographs and mask these images so it appears I had a twin.</p>
+	</div>
 	</div>
 </div>
-
-<!-- 
-<div class="col-2-3 sliderpadding">
-	<div id="slider">
-		<img src="img/photomanipulations/chel.jpg">
-		<img src="img/photomanipulations/brad.jpg">
-		<img src="img/photomanipulations/maria.jpg">
-		<img src="img/photomanipulations/linds.jpg">
-		<img src="img/photomanipulations/peter.jpg">
-		<img src="img/photomanipulations/sara.jpg">
-		</div>
-	</div> -->
-
-
-<!-- <div class="col-2-3">
-	<div id="slider2 sliderpadding">
-		<img src="img/photomanipulations/twin1.jpg">
-		<img src="img/photomanipulations/twin2.jpg">
-		<img src="img/photomanipulations/twin3.jpg">
-		<img src="img/photomanipulations/twin4.jpg">
-		<img src="img/photomanipulations/twin5.jpg">
-		<img src="img/photomanipulations/twin6.jpg">
-		</div>
-	</div>
-
-<div class="col-1-3 sliderpadding">
-	<div class="sidedescription">
-	<p>hellooo</p>
-	</div>
-</div> -->
 
 <br><br>
 
