--- a/printandbrand.html
+++ b/printandbrand.html
@@ -13,7 +13,7 @@
 <body>
 <div class ="grid header col-1-1">
 		<a class="logo" href="index.html"><h1>AMANDA JENNINGS</h1></a>
-		<a class="hamburger" href="index.html"><h2>LEARN MORE</h2></a>
+		<a class="hamburger" href="aboutme.html"><h2>ABOUT ME</h2></a>
 </div>
 
 
