--- a/mediakit.html
+++ b/mediakit.html
@@ -64,7 +64,7 @@
 
 <div class="col-1-3 sliderpadding">
 	<div class="sidedescription">
-	<p>hellooo</p>
+	<p>The media kit I developed for Fine Cooking reflects brand standards of the company through photography and typography.</p>
 	</div>
 </div>
 
