--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<php include_once("analyticstracking.php")>
+<?php include_once("analyticstracking.php") ?>
 
 <div class ="grid header col-1-1">
 		<a class="logo" href="homepage.html"><h1>AMANDA JENNINGS</h1></a>
