--- a/mediakit.html
+++ b/mediakit.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<php include_once("analyticstracking.php")>
+<?php include_once("analyticstracking.php") ?>
 
 <div class ="grid header col-1-1">
 		<a class="logo" href="index.html"><h1>AMANDA JENNINGS</h1></a>
