--- a/mediakit.html
+++ b/mediakit.html
@@ -42,31 +42,32 @@
 </div>
 
 <br><Br><br>
-
-<div class="col-2-3 sliderpadding">
-	<div id="slider">
-		<img src="img/finecookingmediakit/FC1.jpg">
-		<img src="img/finecookingmediakit/FC2.jpg">
-		<img src="img/finecookingmediakit/FC3.jpg">
-		<img src="img/finecookingmediakit/FC4.jpg">
-		<img src="img/finecookingmediakit/FC4-1.jpg">
-		<img src="img/finecookingmediakit/FC5.jpg">
-		<img src="img/finecookingmediakit/FC5-1.jpg">
-		<img src="img/finecookingmediakit/FC6.jpg">
-		<img src="img/finecookingmediakit/FC8.jpg">
-		<img src="img/finecookingmediakit/FC13.jpg">
-		<img src="img/finecookingmediakit/FC15.jpg">
-		<img src="img/finecookingmediakit/FC116.jpg">
-		<img src="img/finecookingmediakit/FC16-1.jpg">
-		<img src="img/finecookingmediakit/FC18.jpg">
-		<img src="img/finecookingmediakit/FC19.jpg">
-		<img src="img/finecookingmediakit/FC26.jpg">
+<div class="mediaslider">
+	<div class="col-2-3 sliderpadding">
+		<div id="slider">
+			<img src="img/finecookingmediakit/FC1.jpg">
+			<img src="img/finecookingmediakit/FC2.jpg">
+			<img src="img/finecookingmediakit/FC3.jpg">
+			<img src="img/finecookingmediakit/FC4.jpg">
+			<img src="img/finecookingmediakit/FC4-1.jpg">
+			<img src="img/finecookingmediakit/FC5.jpg">
+			<img src="img/finecookingmediakit/FC5-1.jpg">
+			<img src="img/finecookingmediakit/FC6.jpg">
+			<img src="img/finecookingmediakit/FC8.jpg">
+			<img src="img/finecookingmediakit/FC13.jpg">
+			<img src="img/finecookingmediakit/FC15.jpg">
+			<img src="img/finecookingmediakit/FC116.jpg">
+			<img src="img/finecookingmediakit/FC16-1.jpg">
+			<img src="img/finecookingmediakit/FC18.jpg">
+			<img src="img/finecookingmediakit/FC19.jpg">
+			<img src="img/finecookingmediakit/FC26.jpg">
+			</div>
 		</div>
-	</div>
 
-<div class="col-1-3 sliderpadding">
-	<div class="sidedescription">
-	<p>The media kit I developed for Fine Cooking reflects brand standards of the company through photography and typography.</p>
+	<div class="col-1-3 sliderpadding">
+		<div class="sidedescription">
+		<p>The media kit I developed for Fine Cooking reflects brand standards of the company through photography and typography.</p>
+		</div>
 	</div>
 </div>
 
