--- a/aboutme.html
+++ b/aboutme.html
@@ -31,18 +31,62 @@
 	<div class="aboutmeheader">
 	<div class="col-2-3">
 		<p>Amanda is a digital designer based in Brooklyn, NY. Originally from Connecticut, she studied graphic design at Southern Connecticut State University, photography & advertising while abroad at Napier University in Edinburgh, UK, and Front-End Web Development at General Assembly (which allowed her the skills to build this site!). Her interests include iced coffee year-round, fashion, being an ebay enthusiast, and discovering the best food around New York City. She has attention to detail, strong work ethic, and a sense of humor.</p>
+		<br>
+		<h1>WORK EXPERIENCE</h1>
+		<p>Junior Marketing Graphic Designer
+		<br>
+		General Assembly HQ | Manhattan, New York 
+		<br>
+		9/15 — present
+		
+		<br><br>
+		Junior Graphic Designer
+		<br>
+		Taunton Press | Newtown, Connecticut
+		<br> 
+		5/15 — 8/15
+
+		<br><br>
+		Graphic Design Intern
+		<br>
+		Alexander Isley Inc. Designers | Redding, Connecticut 
+		<br>
+		3/15 — 5/15
+		</p>
+
+		<br><br>
+		<h1>EDUCATION</h1>
+		<p>Front-End Web Development
+		<br>
+		General Assembly | Manhattan, New York 
+		<br>
+		2/17 — 4/17
+
+		<br><br>
+		Bachelor of Science in Graphic Design
+		<br>
+		Southern Connecticut State University | New Haven, Connecticut 
+		<br>
+		9/10 — 5/15
+
+		<br><br>
+		Photography & Advertising
+		<br>
+		Edinburgh Napier University | Edinburgh, UK 
+		<br>
+		8/14 — 12/14</p>
+
+		<br><Br>
+		<h1>PROFICIENCIES</h1>
+		<p>InDesign, Photoshop, Lightroom, Illustrator,
+		<br>
+		After Effects, CSS, HTML, JavaScript, Keynote, Jira</p>
+
+
+
 	</div>
 	</div>
 </div>
-
-<!-- <div class="grid col-1-2">
-In past versions of General Assembly’s emails, the templates were inconsistent, did not follow brand guidelines, and were an OCD designer's nightmare. I was tasked to redesign all emails sent out by the company with the goal of creating one template that had transferable modules. The following designs were sent out as an A/B test against the prior versions of emails and the new designs resulted in higher results in a variety of categories.
-</div> -->
-
-
-
-
-
 
 
 
