--- a/printandbrand.html
+++ b/printandbrand.html
@@ -19,7 +19,7 @@
 </div>
 
 
-<div class="header">
+<div class="grid header">
 		<div class="col-1-1">
 			<div class="project6header">
 				<img src="img/project6_bodyheader.png">
@@ -27,7 +27,7 @@
 		</div>
 </div>
 
-<div class="header1">
+<div class="grid header1">
 	<div class="col-1-1">
 		<div class="projectdescription">
 			<h2>ILLUSTRATIONS | SYSTEMS</h2>
@@ -48,7 +48,7 @@
 
 <!-- three collumns and 2 rows -->
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
@@ -84,7 +84,7 @@
 		</div>
 </div>
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project4">
 				<a class="overlay" href="mediakit.html">
