--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -20,7 +20,7 @@
 
 <!-- body contents -->
 
-<div class="header">
+<div class="grid header">
 		<div class="col-1-1">
 			<div class="project2header">
 				<img src="img/project2_bodyheader.png">
@@ -48,7 +48,7 @@
 
 <!-- three collumns and 2 rows -->
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
@@ -84,7 +84,7 @@
 		</div>
 </div>
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project4">
 				<a class="overlay" href="mediakit.html">
