--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!-- three collumns and 2 rows -->
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
@@ -57,7 +57,7 @@
 		</div>
 </div>
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project4">
 				<a class="overlay" href="mediakit.html">
