--- a/mediakit.html
+++ b/mediakit.html
@@ -22,7 +22,7 @@
 
 <!-- body contents -->
 
-<div class="header">
+<div class="grid header">
 		<div class="col-1-1">
 			<div class="project4header">
 				<img src="img/project4_bodyheader.png">
@@ -30,7 +30,7 @@
 		</div>
 </div>
 
-<div class="header">
+<div class="grid header">
 		<div class="col-1-1">
 			<div class="projectdescription">
 				<h2>MEDIA KIT | ADVERTISING | PUBLIC RELATIONS</h2>
@@ -42,7 +42,7 @@
 </div>
 
 <br><Br><br>
-<div class="mediaslider">
+<div class="grid mediaslider">
 	<div class="col-2-3 sliderpadding">
 		<div id="slider">
 			<img src="img/finecookingmediakit/FC1.jpg">
@@ -74,7 +74,7 @@
 
 <!-- three collumns and 2 rows -->
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
@@ -112,7 +112,7 @@
 
 
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project4">
 				<a class="overlay" href="mediakit.html">
