--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -20,7 +20,7 @@
 
 <!-- body contents -->
 
-<div class="header">
+<div class="grid header">
 	<div class="col-1-1">
 		<div class="project5header">
 			<img src="img/project5_bodyheader.png">
@@ -28,7 +28,7 @@
 	</div>
 </div>
 
-<div class="header">
+<div class="grid header">
 	<div class="col-1-1">
 		<div class="projectdescription">
 			<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
@@ -149,7 +149,7 @@
 
 <!-- three collumns and 2 rows -->
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
@@ -185,7 +185,7 @@
 		</div>
 </div>
 
-<div class="threecolumn">
+<div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project4">
 				<a class="overlay" href="mediakit.html">
