--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -39,8 +39,18 @@
 
 
 
-<div class="project1body">
+<div class="grid project1body">
 	<div class="col-1-1">
+	<img src="img/GeneralAssemblyEmailDesign_master.jpg">
+	<img src="img/GeneralAssemblyEmailDesign_master2.jpg">
+	<img src="img/GeneralAssemblyEmailDesign_master3.jpg">
+	<img src="img/GeneralAssemblyEmailDesign_master4.jpg">
+	<img src="img/GeneralAssemblyEmailDesign_master5.jpg">
+	<img src="img/GeneralAssemblyEmailDesign_master6.jpg">
+	<img src="img/GeneralAssemblyEmailDesign_master7.jpg">
+	<img src="img/GeneralAssemblyEmailDesign_master8.jpg">
+	<img src="img/GeneralAssemblyEmailDesign_master9.jpg">
+	<img src="img/GeneralAssemblyEmailDesign_master10.jpg">
 	<img src="img/project1_bodyimage1.png">
 	<img src="img/project1_bodyimage2.png">
 </div>
