--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -32,7 +32,7 @@
 		<div class="projectdescription">
 			<h2>RESPONSIVE LAYOUT DESIGN | CREATED IN SKETCH</h2>
 			<h1>General Assembly Email Redesign</h1>
-			<p>In past versions of General Assembly’s emails, the templates were inconsistent, did not follow brand guidelines, and were an OCD designer's nightmare. I was tasked to redesign all emails sent out by the company with the goal of creating one template that had transferable modules. The following designs were sent out as an A/B test against the prior versions of emails and the new designs resulted in higher results in a variety of categories.</p>
+			<p>In past versions of General Assembly’s emails, the templates were inconsistent, did not follow brand guidelines, and were an OCD designer's nightmare. I was tasked to redesign all emails sent out by the company with the goal of creating one template that had transferable modules. The following designs were sent out as an A/B test against the prior versions of emails and the new designs resulted in higher results in a variety of categories. View the Master Email Design Guide pdf <a class="GA_MasterEmailDesign" href="img/_GA_MasterEmailDesign.pdf">here.</p>
 		</div>
 	</div>
 </div>
@@ -41,15 +41,6 @@
 
 <div class="grid project1body">
 	<div class="col-1-1">
-	<img src="img/GeneralAssemblyEmailDesign_master2.jpg">
-	<img src="img/GeneralAssemblyEmailDesign_master3.jpg">
-	<img src="img/GeneralAssemblyEmailDesign_master4.jpg">
-	<img src="img/GeneralAssemblyEmailDesign_master5.jpg">
-	<img src="img/GeneralAssemblyEmailDesign_master6.jpg">
-	<img src="img/GeneralAssemblyEmailDesign_master7.jpg">
-	<img src="img/GeneralAssemblyEmailDesign_master8.jpg">
-	<img src="img/GeneralAssemblyEmailDesign_master9.jpg">
-	<img src="img/GeneralAssemblyEmailDesign_master10.jpg">
 	<img src="img/project1_bodyimage1.png">
 	<img src="img/project1_bodyimage2.png">
 </div>
