--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -32,7 +32,7 @@
 		<div class="projectdescription">
 			<h2>RESPONSIVE LAYOUT DESIGN | CREATED IN SKETCH</h2>
 			<h1>General Assembly Email Redesign</h1>
-			<p>In past versions of General Assembly’s emails, the templates were inconsistent, did not follow brand guidelines, and were an OCD designer's nightmare. I was tasked to redesign all emails sent out by the company with the goal of creating one template that had transferable modules. The following designs were sent out as an A/B test against the prior versions of emails and the new designs resulted in higher results in a variety of categories. View the Master Email Design Guide pdf <a class="GA_MasterEmailDesign" href="img/gamasteremaildesign.pdf">here.</p>
+			<p>In past versions of General Assembly’s emails, the templates were inconsistent, did not follow brand guidelines, and were an OCD designer's nightmare. I was tasked to redesign all emails sent out by the company with the goal of creating one template that had transferable modules. The following designs were sent out as an A/B test against the prior versions of emails and the new designs resulted in higher results in a variety of categories. View the Master Email Design Guide pdf <a class="GA_MasterEmailDesign" href="gamasteremaildesign.pdf">here.</p>
 		</div>
 	</div>
 </div>
