--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,9 @@
 	</div>
 	<div class="aboutmeheader">
 	<div class="col-2-3">
-		<p>Amanda is a digital designer based in Brooklyn, NY. Originally from Connecticut, she studied graphic design at Southern Connecticut State University, photography & advertising while abroad at Napier University in Edinburgh, UK, and Front-End Web Development at General Assembly (which allowed her the skills to build this site!). Her interests include iced coffee year-round, fashion, being an ebay enthusiast, and discovering the best food around New York City. She has attention to detail, strong work ethic, and a sense of humor.</p>
+		<p>Amanda is a graphic designer based in Brooklyn, NY. Originally from Connecticut, she studied Graphic Design and graduated cum laude from Southern Connecticut State University. She has continued her education by studying front-end web development and user experience design part-time at General Assembly. 
+		<br>
+		Her interests include iced coffee year-round, being an ebay enthusiast, discovering the best food around the city, and her French Bulldog named Lady. She has attention to detail, strong work ethic, and a sense of humor.</p>
 		<br>
 		<h1>WORK EXPERIENCE</h1>
 		<p>Designer
