--- a/aboutme.html
+++ b/aboutme.html
@@ -37,13 +37,13 @@
 		<h1>WORK EXPERIENCE</h1>
 		<p>Designer
 		<br>
-		General Assembly HQ | Manhattan, New York 
+		General Assembly HQ | New York, New York 
 		<br>
 		9/17 — present
 			
 		<p>Junior Designer
 		<br>
-		General Assembly HQ | Manhattan, New York 
+		General Assembly HQ | New York, New York 
 		<br>
 		9/15 — 9/17
 		
@@ -64,9 +64,15 @@
 
 		<br><br>
 		<h1>EDUCATION</h1>
+		<p>User Experience Design
+		<br>
+		General Assembly | New York, New York 
+		<br>
+		6/17 — 8/17
+		
 		<p>Front-End Web Development
 		<br>
-		General Assembly | Manhattan, New York 
+		General Assembly | New York, New York 
 		<br>
 		2/17 — 4/17
 
