--- a/aboutme.html
+++ b/aboutme.html
@@ -48,7 +48,7 @@
 		9/15 — 9/17
 		
 		<br><br>
-		Junior Graphic Designer
+		Junior Designer
 		<br>
 		Taunton Press | Newtown, Connecticut
 		<br> 
