--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h2>RESPONSIVE LAYOUT DESIGN | CREATED IN SKETCH</h2>
-					<h1>General Assembly Email Redesign</h1>
+					<h1>Email Template Re-design</h1>
+					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
 				  	</div>
 				</a>
 				<img src="img/project1_homepage.png" title="Sweepstakes">
@@ -37,8 +37,8 @@
 			<div class="project2">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
-					<h2>ART DIRECTION | STUDIO PHOTOGRAPHY | PHOTOGRAPHY EDITING | ASSET PRODUCTION</h2>
-					<h1>Sweepstakes + Campaigns</h1>
+					<h1>Art Direction</h1>
+					<h2>STUDIO PHOTOGRAPHY | EDITING | ASSET PRODUCTION</h2>
 				  	</div>
 				</a>
 				<img src="img/project2_homepage.png" title="Sweepstakes" alt="Sweepstakes">
@@ -48,8 +48,8 @@
 			<div class="project3">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
+				  	<h1>Marketing Collateral / Advertising</h1>
 					<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
-					<h1>Digital + Print Advertising</h1>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -62,8 +62,8 @@
 			<div class="project4">
 				<a class="overlay" href="mediakit.html">
 				  <div class="overlay-text">
-					<h2>MEDIA KIT | ADVERTISING | PUBLIC RELATIONS</h2>
-					<h1>Fine Cooking Media Kit</h1>
+				  	<h1>Fine Cooking Media Kit</h1>
+					<h2>ADVERTISING | PUBLIC RELATIONS</h2>
 				  	</div>
 				</a>
 				<img src="img/project4_homepage.png" title="Fine Cooking Media Kit">
@@ -73,8 +73,8 @@
 			<div class="project5">
 				<a class="overlay" href="photomanipulation.html">
 				  <div class="overlay-text">
+				  	<h1>Photography Manipulation</h1>
 					<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
-					<h1>Photography Manipulation</h1>
 				  	</div>
 				</a>
 				<img src="img/project5_homepage.png" title="Photo Manipulations">
@@ -84,8 +84,8 @@
 			<div class="project6">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
+				  	<h1>Branding</h1>
 					<h2>ILLUSTRATION | SYSTEMS</h2>
-				<h1>Branding</h1>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
@@ -123,10 +123,8 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-97913479-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 </body>
 
