--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -154,8 +154,8 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h2>RESPONSIVE LAYOUT DESIGN | CREATED IN SKETCH</h2>
-					<h1>General Assembly Email Redesign</h1>
+					<h1>Email Template Re-design</h1>
+					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
 				  	</div>
 				</a>
 				<img src="img/project1_homepage.png" title="Sweepstakes">
@@ -165,8 +165,8 @@
 			<div class="project2">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
-					<h2>ART DIRECTION | STUDIO PHOTOGRAPHY | PHOTOGRAPHY EDITING | ASSET PRODUCTION</h2>
-					<h1>Sweepstakes + Campaigns</h1>
+					<h1>Art Direction</h1>
+					<h2>STUDIO PHOTOGRAPHY | EDITING | ASSET PRODUCTION</h2>
 				  	</div>
 				</a>
 				<img src="img/project2_homepage.png" title="Sweepstakes" alt="Sweepstakes">
@@ -176,8 +176,8 @@
 			<div class="project3">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
+				  	<h1>Marketing Collateral / Advertising</h1>
 					<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
-					<h1>Digital + Print Advertising</h1>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -190,8 +190,8 @@
 			<div class="project4">
 				<a class="overlay" href="mediakit.html">
 				  <div class="overlay-text">
-					<h2>MEDIA KIT | ADVERTISING | PUBLIC RELATIONS</h2>
-					<h1>Fine Cooking Media Kit</h1>
+				  	<h1>Fine Cooking Media Kit</h1>
+					<h2>ADVERTISING | PUBLIC RELATIONS</h2>
 				  	</div>
 				</a>
 				<img src="img/project4_homepage.png" title="Fine Cooking Media Kit">
@@ -201,8 +201,8 @@
 			<div class="project5">
 				<a class="overlay" href="photomanipulation.html">
 				  <div class="overlay-text">
+				  	<h1>Photography Manipulation</h1>
 					<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
-					<h1>Photography Manipulation</h1>
 				  	</div>
 				</a>
 				<img src="img/project5_homepage.png" title="Photo Manipulations">
@@ -212,8 +212,8 @@
 			<div class="project6">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
+				  	<h1>Branding</h1>
 					<h2>ILLUSTRATION | SYSTEMS</h2>
-				<h1>Branding</h1>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
