--- a/aboutme.html
+++ b/aboutme.html
@@ -30,74 +30,13 @@
 	</div>
 	<div class="aboutmeheader">
 	<div class="col-2-3">
-		<p>Amanda is a graphic designer based in Brooklyn, NY. Originally from Connecticut, she studied Graphic Design and graduated cum laude from Southern Connecticut State University. She has continued her education by studying front-end web development and user experience design part-time at General Assembly. 
+		<p><b>Amanda Jennings </b> is a graphic designer passionate about visual communication based in Brooklyn, NY. Originally from Connecticut, she studied Graphic Design and graduated cum laude from Southern Connecticut State University. She has continued her education through studying front-end web development and user experience design at General Assembly. 
 		<br><br>
-		Her interests include iced coffee year-round, being an ebay enthusiast, discovering the best food around the city, and her French Bulldog named Lady. She has attention to detail, strong work ethic, and a sense of humor.</p>
-		<br>
-		<h1>WORK EXPERIENCE</h1>
-		<p>Designer
-		<br>
-		General Assembly HQ | New York, New York 
-		<br>
-		9/17 — present
-			
-		<p>Junior Designer
-		<br>
-		General Assembly HQ | New York, New York 
-		<br>
-		9/15 — 9/17
-		
+		Amanda's interests include iced coffee year-round, wearing layers, being an ebay enthusiast, discovering the best food in the city, and staying inside with her French Bulldog, Lady. 
 		<br><br>
-		Junior Designer
-		<br>
-		Taunton Press | Newtown, Connecticut
-		<br> 
-		5/15 — 8/15
-
-		<br><br>
-		Graphic Design Intern
-		<br>
-		Alexander Isley Inc. Designers | Redding, Connecticut 
-		<br>
-		3/15 — 5/15
-		</p>
-
-		<br><br>
-		<h1>EDUCATION</h1>
-		<p>User Experience Design
-		<br>
-		General Assembly | New York, New York 
-		<br>
-		6/17 — 8/17
-		
-		<p>Front-End Web Development
-		<br>
-		General Assembly | New York, New York 
-		<br>
-		2/17 — 4/17
-
-		<br><br>
-		Bachelor of Science in Graphic Design
-		<br>
-		Southern Connecticut State University | New Haven, Connecticut 
-		<br>
-		9/10 — 5/15
-
-		<br><br>
-		Photography & Advertising
-		<br>
-		Edinburgh Napier University | Edinburgh, UK 
-		<br>
-		8/14 — 12/14</p>
-
-		<br><Br>
-		<h1>PROFICIENCIES</h1>
-		<p>InDesign, Photoshop, Lightroom, Illustrator,
-		<br>
-		After Effects, CSS, HTML, JavaScript, Keynote, Jira</p>
-
-
-
+		She has attention to detail, strong work ethic, and a sense of humor.</p>
+		<a href="mailto:jenningsab@icloud.com" width="350" height="264">Reach out to Amanda</a>
+				<br>
 	</div>
 	</div>
 </div>
@@ -136,10 +75,8 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-97913479-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 </body>
 
