--- a/aboutme.html
+++ b/aboutme.html
@@ -32,9 +32,10 @@
 	<div class="col-2-3">
 		<p><b>Amanda Jennings </b> is a graphic designer passionate about visual communication based in Brooklyn, NY. Originally from Connecticut, she studied Graphic Design and graduated cum laude from Southern Connecticut State University. She has continued her education through studying front-end web development and user experience design at General Assembly. 
 		<br><br>
-		Amanda's interests include iced coffee year-round, wearing layers, being an ebay enthusiast, finding the best bang for my buck, discovering the best food in the city, and staying inside with her French Bulldog, Lady. 
+		Amanda's interests include iced coffee year-round, wearing layers, being an ebay enthusiast, discovering the best food in the city, and staying inside with her French Bulldog, Lady. 
 		<br><br>
 		She has attention to detail, strong work ethic, and a sense of humor.</p>
+		<br>
 		<a href="mailto:jenningsab@icloud.com" width="350" height="264">Reach out to Amanda</a>
 				<br>
 	</div>
