--- a/advertising.html
+++ b/advertising.html
@@ -13,9 +13,11 @@
 <body>
 <?php include_once("analyticstracking.php") ?>
 
-<div class ="grid header col-1-1">
+<div class ="grid head">
+	<div class="col-1-1">
 		<a class="logo" href="index.html"><h1>AMANDA JENNINGS</h1></a>
 		<a class="hamburger" href="aboutme.html"><h2>ABOUT ME</h2></a>
+	</div>
 </div>
 
 <!-- body contents -->
