--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -21,7 +21,7 @@
 </div>
 
 
-<div class="header">
+<div class="grid head">
 		<div class="col-1-1">
 			<div class="project1header">
 				<img src="img/project1_bodyheader.png">
@@ -29,12 +29,14 @@
 		</div>
 </div>
 
-<div class="header1">
+<div class="grid head">
 	<div class="col-1-1">
 		<div class="projectdescription">
-			<h2>RESPONSIVE LAYOUT DESIGN | CREATED IN SKETCH</h2>
 			<h1>General Assembly Email Redesign</h1>
-			<p>In past versions of General Assembly’s emails, the templates were inconsistent, did not follow brand guidelines, and were an OCD designer's nightmare. I was tasked to redesign all emails sent out by the company with the goal of creating one template that had transferable modules. The following designs were sent out as an A/B test against the prior versions of emails and the new designs resulted in higher results in a variety of categories. View the Master Email Design Guide pdf <a class="GA_MasterEmailDesign" href="img/gamasteremaildesign.pdf">here.</p>
+			<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
+			<br>
+			<p>Working closely with the email team's front-end developer, I redesigned and reimagined GA's emails into a cleaner, simplified template. Each section of the email is created as a module to reorganize and mix/match as needed. 
+			<a class="GA_MasterEmailDesign" href="img/gamasteremaildesign.pdf">here.</p>
 		</div>
 	</div>
 </div>
