--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -32,10 +32,9 @@
 <div class="grid head">
 	<div class="col-1-1">
 		<div class="projectdescription">
-			<h1>General Assembly Email Redesign</h1>
 			<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
-			<p>Working closely with the email team's front-end developer, I redesigned and reimagined GA's emails into a cleaner, simplified template. Each section of the email is created as a module to reorganize and mix/match as needed. 
-			<a class="GA_MasterEmailDesign" href="img/gamasteremaildesign.pdf">here.</p>
+			<h1>General Assembly Email Redesign</h1>
+			<p>Working closely with the email team's front-end developer, I redesigned and reimagined GA's emails into a cleaner, simplified template. Each section of the email is created as a module to reorganize and mix/match as needed. </p>
 		</div>
 	</div>
 </div>
