--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -30,7 +30,7 @@
 		</div>
 </div>
 
-<div class="header">
+<div class="grid head">
 		<div class="col-1-1">
 			<div class="projectdescription">
 				<h2>ART DIRECTION | STUDIO PHOTOGRAPHY | PHOTOGRAPHY EDITING | ASSET PRODUCTION</h2>
@@ -41,10 +41,11 @@
 </div>
 
 
-
-<div class="project1body">
-	<div class="col-1-1">
-	<img src="img/project2_bodyimage1.png">
+<div class="grid head">
+	<div class="project1body">
+		<div class="col-1-1">
+		<img src="img/project2_bodyimage1.png">
+	</div>
 </div>
 
 
