--- a/advertising.html
+++ b/advertising.html
@@ -22,7 +22,7 @@
 
 <!-- body contents -->
 
-<div class="header">
+<div class="grid head">
 		<div class="col-1-1">
 			<div class="project3header">
 				<img src="img/project3_bodyheader.png">
@@ -30,7 +30,7 @@
 		</div>
 </div>
 
-<div class="header">
+<div class="grid head">
 		<div class="col-1-1">
 			<div class="projectdescription">
 				<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
@@ -41,10 +41,11 @@
 </div>
 
 
-
-<div class="project1body">
-	<div class="col-1-1">
-	<img src="img/project3_bodyimage.png">
+<div class="grid head">
+	<div class="project1body">
+		<div class="col-1-1">
+		<img src="img/project3_bodyimage.png">
+	</div>
 </div>
 
 
