--- a/printandbrand.html
+++ b/printandbrand.html
@@ -40,10 +40,11 @@
 </div>
 
 
-
-<div class="project1body">
-	<div class="col-1-1">
-	<img src="img/project6_bodyimage.png">
+<div class="grid header1">
+	<div class="project1body">
+		<div class="col-1-1">
+		<img src="img/project6_bodyimage.png">
+	</div>
 </div>
 
 <br>
