--- a/printandbrand.html
+++ b/printandbrand.html
@@ -44,6 +44,7 @@
 	<div class="project1body">
 		<div class="col-1-1">
 		<img src="img/project6_bodyimage.png">
+		<img src="img/GAScholarship_LandingPage.gif">
 	</div>
 </div>
 
