--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -34,7 +34,7 @@
 		<div class="projectdescription">
 			<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
 			<h1>General Assembly Email Redesign</h1>
-			<p>Working closely with the email team's front-end developer, I redesigned and reimagined GA's emails into a cleaner, simplified template. Each section of the email is created as a module to reorganize and mix/match as needed. </p>
+			<p>Working closely with the email team's front-end developer: I redesigned, reimagined, and streamlined GA's email style into a cleaner, simplified template. Based on modules, each section of the email is created to be re-ordered depending on sections needed.</p>
 		</div>
 	</div>
 </div>
@@ -43,8 +43,9 @@
 
 <div class="grid project1body">
 	<div class="col-1-1">
-	<img src="img/project1_bodyimage1.png">
-	<img src="img/project1_bodyimage2.png">
+	<img src="img/Email_1.jpg">
+	<img src="img/Email_2.jpg">
+	<img src="img/Email_3.jpg">
 </div>
 
 <br>
