--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -160,7 +160,7 @@
 					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
 				  	</div>
 				</a>
-				<img src="img/project1_homepage.png" title="Sweepstakes">
+				<img src="img/EmailTumbnail_.gif" title="Sweepstakes">
 			</div>
 		</div>
 		<div class="col-1-3">
