--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -24,7 +24,7 @@
 <div class="grid head">
 		<div class="col-1-1">
 			<div class="project1header">
-				<img src="img/project1_bodyheader.png">
+				<!-- <img src="img/project1_bodyheader.png"> -->
 			</div>
 		</div>
 </div>
@@ -33,7 +33,7 @@
 	<div class="col-1-1">
 		<div class="projectdescription">
 			<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
-			<h1>General Assembly Email Redesign</h1>
+			<h1>Email Template Designs</h1>
 			<p>Working closely with the email team's front-end developer: I redesigned, reimagined, and streamlined GA's email style into a cleaner, simplified template. Based on modules, each section of the email is created to be re-ordered depending on sections needed.</p>
 		</div>
 	</div>
@@ -43,9 +43,10 @@
 
 <div class="grid project1body">
 	<div class="col-1-1">
-	<img src="img/Email_1.jpg">
-	<img src="img/Email_2.jpg">
-	<img src="img/Email_3.jpg">
+	<img src="img/Email_1.png">
+	<img src="img/Email_2.png">
+	<img src="img/Email_3.png">
+	<img src="img/Email_4.png">
 </div>
 
 <br>
@@ -58,7 +59,7 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Re-design</h1>
+					<h1>Email Template Designs</h1>
 					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
 				  	</div>
 				</a>
