--- a/printandbrand.html
+++ b/printandbrand.html
@@ -24,7 +24,7 @@
 <div class="grid header">
 		<div class="col-1-1">
 			<div class="project6header">
-				<img src="img/project6_bodyheader.png">
+<!-- 				<img src="img/project6_bodyheader.png"> -->
 			</div>
 		</div>
 </div>
@@ -57,7 +57,7 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Re-design</h1>
+					<h1>Email Template Designs</h1>
 					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
 				  	</div>
 				</a>
