--- a/advertising.html
+++ b/advertising.html
@@ -25,7 +25,7 @@
 <div class="grid head">
 		<div class="col-1-1">
 			<div class="project3header">
-				<img src="img/project3_bodyheader.png">
+<!-- 				<img src="img/project3_bodyheader.png"> -->
 			</div>
 		</div>
 </div>
@@ -56,7 +56,7 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Re-design</h1>
+					<h1>Email Template Designs</h1>
 					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
 				  	</div>
 				</a>
