--- a/mediakit.html
+++ b/mediakit.html
@@ -27,7 +27,7 @@
 <div class="grid header">
 		<div class="col-1-1">
 			<div class="project4header">
-				<img src="img/project4_bodyheader.png">
+<!-- 				<img src="img/project4_bodyheader.png"> -->
 			</div>
 		</div>
 </div>
@@ -81,7 +81,7 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Re-design</h1>
+					<h1>Email Template Designs</h1>
 					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
 				  	</div>
 				</a>
