--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -25,7 +25,7 @@
 <div class="grid header">
 		<div class="col-1-1">
 			<div class="project2header">
-				<img src="img/project2_bodyheader.png">
+				<!-- <img src="img/project2_bodyheader.png"> -->
 			</div>
 		</div>
 </div>
@@ -33,9 +33,9 @@
 <div class="grid head">
 		<div class="col-1-1">
 			<div class="projectdescription">
-				<h2>ART DIRECTION | STUDIO PHOTOGRAPHY | PHOTOGRAPHY EDITING | ASSET PRODUCTION</h2>
-				<h1>Sweepstakes + Campaigns</h1>
-				<p>Created sweepstakes and brand awareness campaign collateral for email, homepages, landing pages, banners and social media for General Assembly and partners brought on for promotion. My design team members and I would organize photo shoots based on the concept presented behind the campaign, gather desired props and/or models, and shoot these photos at an in-house studio. I have edited, and at times extended the boundaries of these photographs to fit promotional specs. </p>
+				<h2>STUDIO PHOTOGRAPHY | EDITING | PRODUCTION</h2>
+				<h1>Photography and Art Direction</h1>
+<!-- 				<p>Photography and art direction details.</p> -->
 			</div>
 		</div>
 </div>
@@ -44,7 +44,8 @@
 <div class="grid head">
 	<div class="project1body">
 		<div class="col-1-1">
-		<img src="img/project2_bodyimage1.png">
+		<img src="img/PhotoandArtDirection_1.png">
+		<img src="img/DigitalPrizePack_Email_560x350.gif">
 	</div>
 </div>
 
@@ -57,7 +58,7 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Re-design</h1>
+					<h1>Email Template Designs</h1>
 					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
 				  	</div>
 				</a>
