--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -32,9 +32,9 @@
 <div class="grid head">
 	<div class="col-1-1">
 		<div class="projectdescription">
-			<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
-			<h1>Email Template Designs</h1>
-			<p>Working closely with the email team's front-end developer: I redesigned, reimagined, and streamlined GA's email style into a cleaner, simplified template. Based on modules, each section of the email is created to be re-ordered depending on sections needed.</p>
+			<h2>RESPONSIVE LAYOUT | SKETCH</h2>
+			<h1>Email Design</h1>
+			<p>Working closely with the email team's front-end developer: I redesigned, reimagined, and streamlined GA's email style into a clean simplified template that allowed for flexibility in the channel's needs. The design is based on modules, each section of the email is created to be re-organized depending on sections needed in the email send. </p>
 		</div>
 	</div>
 </div>
