--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -34,8 +34,8 @@
 	<div class="col-1-1">
 		<div class="projectdescription">
 			<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
-			<h1>Photography Manipulation</h1>
-			<p>The following two projects have different vibes but share my patience and appreciation for editing photography seamlessly. I am familiar with shooting film and digital photography as well as studio setup and lifestyle photography.</p>
+			<h1>Personal Projects</h1>
+<!-- 			<p>The following two projects have different vibes but share my patience and appreciation for editing photography seamlessly. I am familiar with shooting film and digital photography as well as studio setup and lifestyle photography.</p> -->
 		</div>
 	</div>
 </div>
@@ -43,7 +43,7 @@
 <br><Br><br>
 
 <div class="grid manipulation">
-	<div class="col-2-3">
+	<div class="col-1-1">
 		<div class="col-1-2">
 			<div class="project1">
 				<a href="amandabjennings.com"> 
@@ -87,11 +87,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="project5header">
+<!-- 	<div class="project5header">
 	<div class="col-1-3">
 		<p>These optical illusion portraits were created by masking multiple photographs together to create a unique view. </p>
 	</div>
-	</div>
+	</div> -->
 </div>
 
 
@@ -104,14 +104,14 @@
 				</a>
 			</div>
 		</div>
-		<div class="col-1-1">
+		<div class="col-1-2">
 			<div class="project1">
 				<a href="img/photomanipulations/twin2.jpg" target="_blank">
 				<img src="img/photomanipulations/twin2.jpg">
 				</a>
 			</div>
 		</div>
-		<div class="col-1-1">
+		<div class="col-1-2">
 			<div class="project1">
 				<a href="img/photomanipulations/twin3.jpg" target="_blank">
 				<img src="img/photomanipulations/twin3.jpg">
@@ -125,14 +125,14 @@
 				</a>
 			</div>
 		</div>
-		<div class="col-1-1">
+		<div class="col-1-2">
 			<div class="project1">
 				<a href="img/photomanipulations/twin6.jpg" target="_blank">
 				<img src="img/photomanipulations/twin6.jpg">
 				</a>
 			</div>
 		</div>
-		<div class="col-1-1">
+		<div class="col-1-2">
 			<div class="project1">
 				<a href="img/photomanipulations/twin5.jpg" target="_blank">
 				<img src="img/photomanipulations/twin5.jpg">
@@ -140,11 +140,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="project5header">
+<!-- 	<div class="project5header">
 	<div class="col-1-3">
 		<p>This was a project created while I was in my undergrad program that required me to 'change the past'. When I was younger, my mom would always take multipe photographs of the same event to ensure she had a great shot. I chose to scan in these old photographs and mask these images so it appears I had a twin.</p>
 	</div>
-	</div>
+	</div> -->
 </div>
 
 <br><br>
