--- a/advertising.html
+++ b/advertising.html
@@ -34,8 +34,8 @@
 		<div class="col-1-1">
 			<div class="projectdescription">
 				<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
-				<h1>Digital + Print Advertising</h1>
-				<p>In previous versions of General Assembly emails, the templates were inconsistent, did not follow brand guidelines, and plain + simple were an OCD designer's nightmare. I was tasked to redesign these emails with the goal to create one template that had transferable modules. The immediate goal was to create these to be on-brand without sacrificing previous email perfomance. (Since these emails have gone out, overall performance has improved).</p>
+				<h1>Marketing Collateral and Advertising</h1>
+				<p></p>
 			</div>
 		</div>
 </div>
