--- a/printandbrand.html
+++ b/printandbrand.html
@@ -34,19 +34,44 @@
 		<div class="projectdescription">
 			<h2>ILLUSTRATIONS | SYSTEMS</h2>
 			<h1>Branding</h1>
-			<p>As General Assembly introduced going through brand shift throughout the company, previous brand guidelines were reevaluated to decide where there was room for change and improvement.</p>
+<!-- 			<p>As General Assembly introduced going through brand shift throughout the company, previous brand guidelines were reevaluated to decide where there was room for change and improvement.</p> -->
 		</div>
 	</div>
 </div>
 
 
-<div class="grid header1">
-	<div class="project1body">
-		<div class="col-1-1">
-		<img src="img/project6_bodyimage.png">
-		<img src="img/GAScholarship_LandingPage.gif">
+<div class="grid manipulation">
+	<div class="col-1-1">
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/VoteSticker_InstagramandMockup.gif" target="_blank"> 
+				<img src="img/VoteSticker_InstagramandMockup.gif">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p> This is some type. </p>
+			</div>
+		</div>
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/GAScholarship_LandingPage.gif" target="_blank">
+				<img src="img/GAScholarship_LandingPage.gif">
+				</a>
+			</div>
+		</div>
 	</div>
 </div>
+
+
+<!-- <div class="grid header1">
+	<div class="project1body">
+		<div class="col-1-1">
+		<img src="img/VoteSticker_InstagramandMockup.gif">
+		<img src="img/GAScholarship_LandingPage.gif">
+	</div>
+</div> -->
 
 <br>
 
