--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
 				  	<h1>Marketing Collateral and Advertising</h1>
-					<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
+					<h2>BANNER ADS | PRINT ADS | FACEBOOK ADS </h2>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
