--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
 	<div class="col-1-3">
 		<div class="col-1-1">
 			<div class="project1">
-				<img src="img/aboutmeheader.png">
+				<img src="img/aboutmeheader.jpg">
 				</a>
 			</div>
 		</div>
@@ -34,9 +34,9 @@
 	<div class="col-2-3">
 		<p><b>Amanda Jennings </b> is a graphic designer passionate about visual communication based in Brooklyn, NY. Originally from Connecticut, she studied Graphic Design and graduated cum laude from Southern Connecticut State University. She has continued her education studying front-end web development and user experience design at General Assembly. 
 		<br><br>
-		Amanda's interests include iced coffee year-round, wearing layers, being an ebay enthusiast, finding the best bang for her buck, discovering the best food in the city, drinking sour beers, and staying inside with her French Bulldog, Lady. 
+		Amanda's interests include iced coffee year-round, wearing layers, being an ebay enthusiast, finding the best bang for her buck, discovering the best food in the city, drinking sour beers, and staying inside with her French Bulldog, Lady. Check out what Lady has been up to on <a href="https://www.instagram.com/misslady.thefrenchie/?hl=en"><u>her instagram</u></a>.
 		<br><br>
-		She has attention to detail, strong work ethic, and a sense of humor.</p>
+		Amanda has attention to detail, strong work ethic, and a sense of humor.</p>
 		<br>
 		<a href="mailto:jenningsab@icloud.com" width="350" height="264"><u>Reach out to Amanda</u></a>
 				<br>
