--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -44,6 +44,13 @@
 
 <div class="grid manipulation">
 	<div class="col-1-1">
+		<div class="col-1-1">
+			<div class="project1">
+				<a href="amandabjennings.com"> 
+				<img src="img/BlindContourSeries_FrenchieLady.png" target="_blank">
+				</a>
+			</div>
+		</div>
 		<div class="col-1-2">
 			<div class="project1">
 				<a href="amandabjennings.com"> 
