--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<a class="overlay" href="photomanipulation.html">
 				  <div class="overlay-text">
 				  	<h1>Personal Projects</h1>
-					<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
+					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
 				  	</div>
 				</a>
 				<img src="img/project5_homepage.png" title="Photo Manipulations">
@@ -85,7 +85,7 @@
 			<div class="project6">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
-				  	<h1>Branding</h1>
+				  	<h1>Campaign Branding</h1>
 					<h2>ILLUSTRATION | SYSTEMS</h2>
 				  	</div>
 				</a>
