--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -41,13 +41,23 @@
 </div>
 
 
-<div class="grid head">
-	<div class="project1body">
+<div class="grid manipulation">
+	<div class="col-1-1">
 		<div class="col-1-1">
-		<img src="img/PhotoandArtDirection_1.png">
-		<img src="img/DigitalPrizePack_Email_560x350.gif">
+			<div class="project1">
+				<a href="img/PhotoandArtDirection_1.png">
+				<img src="img/PhotoandArtDirection_1.png">
+				</a>
+			</div>
+		</div>
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/DigitalPrizePack_Email_560x350.gif">
+				<img src="img/DigitalPrizePack_Email_560x350.gif">
+				</a>
+			</div>
+		</div>
 	</div>
-</div>
 
 
 
